fix layout bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ button {
 header {
   display: flex;
   justify-content: center;
-  grid-row-start: 0;
+  grid-row-start: 1;
   grid-row-end: 1;
   grid-column-start: 1;
   grid-column-end: -1;
